# cPlayer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cPlayer
.github/workflows/: ci.yml
aux/: plot_csv.py
aux/test_audio/: logs  make_mp3.sh  make_wav.sh
cmake/: fetch_gtest.cmake  fetch_portaudio.cmake
lib/: CMakeLists.txt
lib/DeserializeInts/: CMakeLists.txt
lib/DeserializeInts/include/: DeserializeInts.h
lib/DeserializeInts/src/: DeserializeInts.c
lib/FileReader/: CMakeLists.txt
lib/FileReader/include/: FileReader.h
lib/FileReader/src/: FileReader.c
lib/libaudiospecs/: CMakeLists.txt
lib/libaudiospecs/include/: libaudiospecs.h
lib/libaudiospecs/src/: AudioBuffer.c
lib/libbitcast/: CMakeLists.txt
lib/libbitcast/include/: bitcast.h
lib/libbitcast/src/: bitcast.c
lib/libbitcast/test/: bitcastTest.cpp
lib/libcodec_wav/: CMakeLists.txt  README.md
lib/libcodec_wav/include/: libcodec_wav.h
lib/libcodec_wav/src/: formatInfo.c  log.h  navigateRiff.c  parseFormatChunk.c  readData.c  readFormatChunk.c  readSample.c  sampleFormat.c  validateFormatChunk.c  wav.c  wav_internals.h
lib/libcodec_wav/test/: CMakeLists.txt  readFormat.cpp  validateFormat.cpp
lib/libcodec_wav/test/MemoryReader/: CMakeLists.txt  MemoryReader.cpp
lib/libstream/: CMakeLists.txt
lib/libstream/src/: read.c
src/: AudioStream.h  CMakeLists.txt  FileReader.c  FileReader.h  Options.c  Options.h  int24.c  int24.h  ints.h  log.h  main.c  wav.c  wav.h
src/Reader/: FixedBufferReader.h  MemoryReader.h  Reader.h  ReaderAdapters.h  fileReaderAdapter.c  fromFileReader.c  fromFixedBufferReader.c  fromMemoryReader.c  read.c
src/codec/: codec_internals.c  codec_internals.h  decode.c  decode.h
src/codec/wav/: formatInfo.c  header.c  navigateRiff.c  parseFormatChunk.c  read.c  readData.c  readFormatChunk.c  readSample.c  sampleFormat.c  validateFormatChunk.c  wav.c  wav.h  wav_internals.h
src/common/: AudioData.c  Error.c  Error.h  Error64.h  Reader.h  audio.h  int24.c  int24.h  log.h  logError.c
src/options/: Flag.c  Flag.h  Options.c  Options.h  printHelp.c
src/play/: callback.c  play.h
src/wav/: dump.c  header.c  read.c  wav.c  wav.h  wav_internals.h
test/: CMakeLists.txt
test/DeserializeInts/: CMakeLists.txt  DeserializeIntsTest.cpp
test/FileReader/: CMakeLists.txt  FileReaderTest.cpp  main.cpp
test/Options/: CMakeLists.txt  OptionsTest.cpp
test/Reader/: CMakeLists.txt  FileReaderReaderTest.cpp  MemoryReaderReaderTest.cpp  ReaderTest.cpp
test/Wav/: CMakeLists.txt  WavHeaderTest.cpp  readFormat.cpp  readWavFormat.cpp  validateFormat.cpp
test/bitcast/: CMakeLists.txt
test/common/: MemoryReader.hpp
test/common/MemoryReader/: CMakeLists.txt  MemoryReader.cpp  MemoryReader.hpp
test/i24/: CMakeLists.txt  i24Test.cpp
wav/: f1_24bit.wav.asd  f1_32bit.wav.asd
